scss/modules/_header.scss
////
/// @author       Web Team at Canonical Ltd
/// @link         http://ubuntudesign.github.io/vanilla-framework/docs/#mixin-vf-header
/// @since        0.0.3
////

/// Default header styling
/// @group header
@mixin vf-header {
  // scss-lint:disable NestingDepth
  .banner {
    position: relative;
    z-index: 2;
    display: block;
    width: auto;
    min-width: 100%;
    border-top: 0;
    background: $brand-color;
    border-bottom: 0;
    box-shadow: inset 0 -1px 0 lighten($mobile-nav, 60%);

    @media only screen and (min-width: $navigation-threshold) {
      border-bottom: 1px solid lighten($mobile-nav, 60%);
      box-shadow: none;
    }

    .logo {
      position: relative;
      display: table;
      float: left;
      overflow: hidden;
      height: 48px;
      margin: 0 10px;
      border-left: 0;

      @media only screen and (min-width : $breakpoint-medium) {
        margin: 0 15px;
      }

      a {
        display: table-cell;
        height: 100%;
        vertical-align: middle;
        color: $header-link-color;

        span {
          display: inline-block;
        }
      }
    }

    h2 {
      font-size: 1.563em;
      position: relative;
      top: 14px;
      left: 4px;
      display: block;
      margin-bottom: 0;
      text-transform: lowercase;

      a,
      a:link,
      a:visited {
        float: left;
        text-decoration: none;
        color: $header-link-color;
      }
    }

    .nav-primary {
      overflow: hidden;
      margin: 0 auto;
      border: 0;

      @media only screen and (min-width: $navigation-threshold) {
        width: $site-max-width;
      }

      span {
        display: none;
      }

      ul {
        display: none;
        float: left;
        width: 100%;
        margin: 0;
        padding: 0;
        border-top: 1px solid lighten($mobile-nav, 60%);
        box-shadow: inset 0 -1px 0 lighten($mobile-nav, 60%);
        background-color: lighten($mobile-nav, 72%);

        @media only screen and (min-width: $navigation-threshold) {
          position: static;
          display: block;
          width: auto;
          border-top: 0;
          background-color: $transparent;
          box-shadow: none;
        }

        li {
          float: left;
          box-sizing: border-box;
          width: 50%;
          margin: 0;
          border-right: 1px solid lighten($mobile-nav, 60%);
          border-bottom: 1px solid lighten($mobile-nav, 60%);
          background: transparent;

          @media only screen and (min-width: $navigation-threshold) {
            width: auto;
            border-right: 0;
            border-bottom: 0;
            border-left: 1px solid darken($brand-color, 8%);

            &:last-child {
              border-right: 1px solid darken($brand-color, 8%);

              a {
                border-right: 0;
              }
            }
          }

          @media only screen and (max-width: $navigation-threshold) {
            &:nth-child(2n+2) {
              border-right: 0;
            }
          }

          a,
          a:link,
          a:visited {
            font-size: 1em;
            font-weight: 300;
            position: relative;
            display: block;
            margin-bottom: 0;
            padding: 8px 10px;
            text-align: left;
            text-decoration: none;
            background-color: lighten($mobile-nav, 72%);
            font-smoothing: subpixel-antialiased;
            color: $cool-grey;

            @media only screen and (min-width: $navigation-threshold) {
              font-size: .875em;
              padding: 14px 14px 13px;
              text-align: center;
              border-left: 1px solid lighten($brand-color, 12%);
              background-color: $transparent;
              color: $header-link-color;
            }

            &:hover {
              background: lighten($mobile-nav, 75%);

              @media only screen and (min-width: $navigation-threshold) {
                background-color: lighten($brand-color, 8%);
              }
            }

            &.active {
              background-color: $nav-active-bg;

              @media only screen and (min-width: $navigation-threshold) {
                background-color: darken($brand-color, 8%);
                border-left: 0;
              }
            }
          }
        }
      }
    }

    .nav-toggle {
      position: absolute;
      top: 0;
      right: 0;
      display: block;
      width: 48px;
      height: 48px;
      cursor: pointer;
      text-indent: -99999px;
      background-image: url('#{$asset-path}img/icons/navigation-menu-plain.svg');
      background-repeat: no-repeat;
      background-position: center center;
      background-size: 25px auto;

      @media only screen and (min-width: $navigation-threshold) {
        display: none;
      }

      .nav-toggle__link {
        width: 48px;
        height: 48px;

        &.open {
          display: block;
        }

        &.close {
          display: none;
        }
      }
    }

    // scss-lint:disable IdSelector
    #nav:target {

      ul {
        display: block;
      }

      + .nav-toggle {

        .nav-toggle__link {

          &.open {
            display: none;
          }

          &.close {
            display: block;
          }
        }
      }
    }
  }
  // scss-lint:enable NestingDepth
} // @mixin vf-header

